# playground

./: .gitignore  .gitmodules  README.md  google-cloud-cheatsheet.md  install-google-cloud-monitoring-agents.md  kubectl-cheatsheet.md  linux-cheatsheet.md  makefile  setup-google-clouddeploy-pipeline.md  terraform-cheatsheet.md
.githooks/: commit-msg  pre-commit
containers/discord/: Containerfile
containers/telegram/: Containerfile
edge-extensions/bookrs/: manifest.json
golang/poppr-e/: .editorconfig  README.md  create-package.sh  go.work  go.work.sum  makefile  sync-commons.sh
google-lab/basics-of-google-cloud-compute/: setup-lab.sh
google-lab/build-a-secure-network/: setup-lab.sh
google-lab/build-langchain-app-using-vertex-ai/: create_text_embeddings_using_langchain.ipynb  gemini_langchain_rag.ipynb  gemini_langchain_vector_search_rag.ipynb  retrieval_augmentation_generation_challenge.ipynb
google-lab/compute-load-balancing/: setup-lab.sh
google-lab/deploy-kubernetes-applications/: setup-lab.sh
google-lab/gen-ai/: inspect_rich_documents_w_gemini_multimodality_and_multimodal_rag.ipynb  intro_function_calling.ipynb  intro_gemini_curl.ipynb
google-lab/get-started-with-cloud-storage/: setup-lab.sh
google-lab/get-started-with-pubsub/: setup-lab.sh
google-lab/implement-cicd-pipelines/: setup-lab.sh
google-lab/monitor-and-manage-cloud-resources/: setup-lab.sh
google-lab/prepare-data-ml-apis/: setup-lab.sh
google-lab/setup-app-dev-env/: setup-lab.sh
google-lab/store-process-manage-data/: setup-lab.sh
langchain/github-azure-models/: hello_langchain_azure.ipynb
langchain/google-genai/: hello_langchain.ipynb
langchain/vertex-ai/: hello.ipynb
multiplatform/passport-app/: README.md  settings.gradle.kts
obsidian/plantation/: Anything About React.md  DevOps Tools.md  Flatpak.md  Homebrew Casks.md  Journald Debugging.md  Linux CLI Tools.md  NFTables Cheatsheet.md  No-code (Low-code) Platform Builders.md  Plantation.md  Postgres Extensions & Tools.md  Postgres Tips.md  React CSS Frameworks.md  Rust Built Tools.md  Self-Host Apps.md  Startup Directories.md  Streaming Tools (Kafka-like).md  ZSH History Expansion.md
rust/async_challenges_1/: Cargo.toml
rust/block_the_fire/: Cargo.toml  README.md
rust/daily-committer/: .editorconfig  .gitignore  COPYRIGHT  Cargo.toml  README.md
rust/daily-committer/helpers/: README.md  daily-committer.service
rust/daily-committer/src/: main.rs
rust/mk-rs/: .gitignore  Cargo.toml  README.md  rustfmt.toml  tasks.yaml
rust/mk-rs/src/schema/: command.rs  mod.rs  precondition.rs  task.rs  task_dependency.rs  task_root.rs
rust/mk-rs/tests/: test_cmd.rs
rust/music-tagger-rs/: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md
rust/music-tagger-rs/src/: main.rs
rust/music-tagger-rs/src/app/: mod.rs
rust/music-tagger-rs/src/domain/: mod.rs
rust/music-tagger-rs/src/infra/: flac.rs  mod.rs  musicbrainz.rs
rust/passport-tg-bot-rs/: Cargo.toml
rust/passport-view-rs/: .env.sample  .gitignore  Cargo.toml  Makefile.toml  README.md  Trunk.toml  app.css  index.html  makefile  tailwind.config.js
rust/passport-view-rs/src/: components.rs  gig_detail.rs  gig_landing.rs  home.rs  job_detail.rs  main.rs  markdown.rs  model.rs  not_found.rs  route.rs  state.rs  theme.rs
rust/passport-view-rs/src/components/: footer.rs  gig.rs  header.rs  job.rs  mod.rs  modal.rs
rust/passport-view-rs/src/model/: job.rs  mod.rs  work_function.rs  work_industry.rs
rust/scarper/: .gitignore  Cargo.toml  README.md  rustfmt.toml
solana/: README.md
solana/hello-sol/: Anchor.toml  LICENSE  README.md
solana/mint-token/: package.json  tasks.yaml
solidity/shiba-inu-avax/: hardhat.config.ts
streamlit/: .gitignore  makefile  requirements.txt
streamlit/chef-recipe/: requirements.txt  streamlit_app.py
swift/: .gitignore
ton-contracts/: README.md  blueprint.config.ts  package.json  pnpm-lock.yaml  tact.config.json  tsconfig.json  tsup.config.ts
(+368 files in other folders)
