[package]
name = "daily-committer"
version = "0.1.1"
edition = "2024"
description = "Automate your daily commits to a git repo."
authors = ["Edward Fitz Abucay <gh:@ffimnsr>"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "development-tools"]
keywords = ["command-line", "commit", "git", "github", "automation"]
exclude = [".gitignore"]

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
git2 = { version = "0.20.0", features = ["vendored-libgit2", "vendored-openssl"] }
log = "0.4.25"
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
