[package]
name = "mk-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "mk_lib"
path = "src/lib.rs"

[[bin]]
name = "mk"
path = "src/cli/bin/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.9"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
snapbox = "0.6.21"
tempfile = "3.14.0"
trycmd = "0.15.8"
