[package]
name = "passport-view-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = { version = "0.18.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
gloo-net = "0.2"
gloo-storage = "0.3"
gloo-utils = "0.2"
wasm-bindgen-futures = "0.4"
pulldown-cmark = { version = "0.12", default-features = false }
gloo-console = "0.3"
bounce = { version = "0.9", git = "https://github.com/ffimnsr/bounce-rs.git" }
url = "2.5"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "HtmlElement",
    "MouseEvent"
]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
